[package]
name = "archmakerd"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
once_cell = "1.15"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.10"
